src/objects/Calendar_Rebuild__c.object
<CustomObject>
    <description>Table to store existing calendar information,  for when we run a full rebuild of future facing stuff</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calendar Rebuilds</relationshipLabel>
        <relationshipName>Calendar_Rebuilds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apt_Date__c</fullName>
        <label>Apt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the new block created after the calendar is rebuilt (not the one it was copied from)</description>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Calendar Rebuilds</relationshipLabel>
        <relationshipName>Calendar_Rebuilds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Room</label>
        <referenceTo>Clinical_Room__c</referenceTo>
        <relationshipLabel>Calendar Rebuilds</relationshipLabel>
        <relationshipName>Calendar_Rebuilds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calendar_Rebuilds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Hour__c</fullName>
        <label>End Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Minute__c</fullName>
        <label>End Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etime__c</fullName>
        <formula>(value(End_Hour__c) * 60) + value(End_Minute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_POT_Apt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient POT Apt</label>
        <referenceTo>Patient_POT_Apt__c</referenceTo>
        <relationshipLabel>Calendar Rebuilds</relationshipLabel>
        <relationshipName>Calendar_Rebuilds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Row Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <label>Start Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Minute__c</fullName>
        <label>Start Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stime__c</fullName>
        <formula>(value(Start_Hour__c) * 60) + value(Start_Minute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Calendar Rebuild</label>
    <nameField>
        <displayFormat>CRN-{0000}</displayFormat>
        <label>Calendar Rebuild Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendar Rebuilds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>